Some improvements to the UI (#1080)